--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 
+<html>
+  <title>
+    First websie
+    </title>
+  
+  <body>
+    <h1> this is my first website</h1>
+  </body>
+  
+  <style>
+    body{
+      backgroundcolor:green;
+      color:afff;
+      text-allign:centre;
+    }
+    </style>
+    
+    </html>
